fix spacing on spring

--- a/index.css
+++ b/index.css
@@ -201,8 +201,13 @@ html {
   /* all desktop styles */
 @media (min-width: 1100px) {
 
+  body .gist .highlight {
+    font-size: 2em;
+  }
+
 #bluespring {
-  margin-left: 30em;
+  margin: auto;
+  width: 100%;
 }
 
   .btn-container {
@@ -222,9 +227,7 @@ html {
   margin-top: 4em;
 }
 
-body .gist .highlight {
-  font-size: 2em;
-}
+
 
 .spacer {
   margin-top: 1em;
